--- a/OnTheMap/Views/Base.lproj/Main.storyboard
+++ b/OnTheMap/Views/Base.lproj/Main.storyboard
@@ -45,8 +45,11 @@
                                                     <constraint firstAttribute="height" constant="50" id="cHf-NA-qBm"/>
                                                 </constraints>
                                                 <color key="textColor" red="0.60641148109999998" green="0.2264176339" blue="0.031650824619999997" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
+                                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
                                                 <textInputTraits key="textInputTraits" returnKeyType="continue" enablesReturnKeyAutomatically="YES" textContentType="username"/>
+                                                <connections>
+                                                    <action selector="onUserNameInputChanged:" destination="BYZ-38-t0r" eventType="editingChanged" id="13X-Xi-1i1"/>
+                                                </connections>
                                             </textField>
                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="EaD-7t-m9l">
                                                 <rect key="frame" x="0.0" y="60" width="300" height="50"/>
@@ -55,10 +58,10 @@
                                                     <constraint firstAttribute="height" constant="50" id="ILf-L1-i3Y"/>
                                                 </constraints>
                                                 <color key="textColor" red="0.60641148109999998" green="0.2264176339" blue="0.031650824619999997" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
+                                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
                                                 <textInputTraits key="textInputTraits" returnKeyType="continue" enablesReturnKeyAutomatically="YES" secureTextEntry="YES" textContentType="password"/>
                                             </textField>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ubo-qD-KQN">
+                                            <button opaque="NO" alpha="0.5" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ubo-qD-KQN">
                                                 <rect key="frame" x="0.0" y="120" width="300" height="50"/>
                                                 <color key="backgroundColor" red="0.60641148114445231" green="0.22641763385787836" blue="0.031650824618781929" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                 <constraints>
