--- a/OnTheMap/Views/Base.lproj/Main.storyboard
+++ b/OnTheMap/Views/Base.lproj/Main.storyboard
@@ -48,7 +48,7 @@
                                                 <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
                                                 <textInputTraits key="textInputTraits" returnKeyType="continue" enablesReturnKeyAutomatically="YES" textContentType="username"/>
                                                 <connections>
-                                                    <action selector="onUserNameInputChanged:" destination="BYZ-38-t0r" eventType="editingChanged" id="13X-Xi-1i1"/>
+                                                    <action selector="onFormInputChanged:" destination="BYZ-38-t0r" eventType="editingChanged" id="10D-uj-k3b"/>
                                                 </connections>
                                             </textField>
                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" minimumFontSize="17" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="EaD-7t-m9l">
@@ -60,6 +60,9 @@
                                                 <color key="textColor" red="0.60641148109999998" green="0.2264176339" blue="0.031650824619999997" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                 <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
                                                 <textInputTraits key="textInputTraits" returnKeyType="continue" enablesReturnKeyAutomatically="YES" secureTextEntry="YES" textContentType="password"/>
+                                                <connections>
+                                                    <action selector="onFormInputChanged:" destination="BYZ-38-t0r" eventType="editingChanged" id="xbc-Mp-OYn"/>
+                                                </connections>
                                             </textField>
                                             <button opaque="NO" alpha="0.5" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ubo-qD-KQN">
                                                 <rect key="frame" x="0.0" y="120" width="300" height="50"/>
