Design UI for location input screen

--- a/OnTheMap/Views/Base.lproj/Main.storyboard
+++ b/OnTheMap/Views/Base.lproj/Main.storyboard
@@ -261,7 +261,11 @@
             <objects>
                 <tabBarController id="ulg-G7-9b2" customClass="OnTheMapTabViewController" customModule="OnTheMap" customModuleProvider="target" sceneMemberID="viewController">
                     <navigationItem key="navigationItem" title="On The Map" id="vCi-HS-B9Z">
-                        <barButtonItem key="leftBarButtonItem" title="Add Pin" image="pin.fill" catalog="system" id="iC4-7b-fnS"/>
+                        <barButtonItem key="leftBarButtonItem" title="Add Pin" image="pin.fill" catalog="system" id="iC4-7b-fnS">
+                            <connections>
+                                <segue destination="s2r-eD-kUX" kind="presentation" modalPresentationStyle="fullScreen" id="FPT-qL-DPf"/>
+                            </connections>
+                        </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" title="Logout" id="Oi7-6E-URk">
                             <connections>
                                 <action selector="doLogout" destination="ulg-G7-9b2" id="kSs-Qr-Bj9"/>
@@ -281,6 +285,132 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="PSd-Do-QzH" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1641" y="137"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="yEm-Wc-bru">
+            <objects>
+                <viewController id="s2r-eD-kUX" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="kgi-GN-MYj">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JVP-OV-VJT" userLabel="Text Section">
+                                <rect key="frame" x="0.0" y="44" width="414" height="250"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="2I9-jO-P0E" userLabel="Text Stack View">
+                                        <rect key="frame" x="0.0" y="39.5" width="414" height="171"/>
+                                        <subviews>
+                                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Where are you" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="rhY-Iv-dyR">
+                                                <rect key="frame" x="0.0" y="0.0" width="414" height="57"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="57" id="xFL-am-34c"/>
+                                                </constraints>
+                                                <color key="textColor" red="0.38085398079999999" green="0.41117927430000001" blue="0.44314241409999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="34"/>
+                                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                            </textView>
+                                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="studying" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="5lz-7D-e1Z">
+                                                <rect key="frame" x="0.0" y="57" width="414" height="57"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="57" id="YF8-LW-Nxz"/>
+                                                </constraints>
+                                                <color key="textColor" red="0.34278728078715409" green="0.34834619465075078" blue="0.36247844407750929" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="34"/>
+                                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                            </textView>
+                                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="today?" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="cZg-Pd-MrC">
+                                                <rect key="frame" x="0.0" y="114" width="414" height="57"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="57" id="uff-dH-tRU"/>
+                                                </constraints>
+                                                <color key="textColor" red="0.38085398079999999" green="0.41117927430000001" blue="0.44314241409999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="34"/>
+                                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                            </textView>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="2I9-jO-P0E" firstAttribute="leading" secondItem="JVP-OV-VJT" secondAttribute="leading" id="4nx-Cq-YNX"/>
+                                    <constraint firstItem="2I9-jO-P0E" firstAttribute="centerY" secondItem="JVP-OV-VJT" secondAttribute="centerY" id="7Xp-3R-lG6"/>
+                                    <constraint firstItem="2I9-jO-P0E" firstAttribute="trailing" secondItem="JVP-OV-VJT" secondAttribute="trailing" id="pVj-0b-FAf"/>
+                                    <constraint firstAttribute="height" constant="250" id="q1p-XS-7CT"/>
+                                </constraints>
+                            </view>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Enter your location here" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="rfK-Rw-R7O">
+                                <rect key="frame" x="0.0" y="294" width="414" height="368"/>
+                                <color key="backgroundColor" red="0.26449506914143106" green="0.39687106525892563" blue="0.66972573241420452" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="23"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="placeholderColor">
+                                        <color key="value" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </textField>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UV7-0h-nhP" userLabel="Button Section">
+                                <rect key="frame" x="0.0" y="662" width="414" height="200"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0OR-Ha-LWG">
+                                        <rect key="frame" x="73" y="69.5" width="268" height="61"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="61" id="9vy-vF-Gzb"/>
+                                            <constraint firstAttribute="width" constant="268" id="EV9-3L-AC6"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="24"/>
+                                        <state key="normal" title="Find on the Map">
+                                            <color key="titleColor" red="0.34278728079999998" green="0.3483461947" blue="0.36247844410000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        </state>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                <real key="value" value="16"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                    </button>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="0OR-Ha-LWG" firstAttribute="centerY" secondItem="UV7-0h-nhP" secondAttribute="centerY" id="2tQ-wn-Eah"/>
+                                    <constraint firstAttribute="height" constant="200" id="Oah-F2-VtT"/>
+                                    <constraint firstItem="0OR-Ha-LWG" firstAttribute="centerX" secondItem="UV7-0h-nhP" secondAttribute="centerX" id="c12-bp-9Dv"/>
+                                </constraints>
+                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xd9-v0-7I5">
+                                <rect key="frame" x="342" y="44" width="52" height="32"/>
+                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="16"/>
+                                <state key="normal" title="Cancel">
+                                    <color key="titleColor" red="0.1574430466" green="0.18746960160000001" blue="0.2274565399" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                </state>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="hoH-BH-dcI"/>
+                        <color key="backgroundColor" red="0.66473077497310118" green="0.67551058311555023" blue="0.7029157455591224" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstItem="UV7-0h-nhP" firstAttribute="bottom" secondItem="hoH-BH-dcI" secondAttribute="bottom" id="0dW-c3-Dr0"/>
+                            <constraint firstItem="JVP-OV-VJT" firstAttribute="trailing" secondItem="hoH-BH-dcI" secondAttribute="trailing" id="6Bp-Mx-ltz"/>
+                            <constraint firstItem="xd9-v0-7I5" firstAttribute="trailing" secondItem="hoH-BH-dcI" secondAttribute="trailing" constant="-20" id="AAe-kh-PGB"/>
+                            <constraint firstItem="rfK-Rw-R7O" firstAttribute="top" secondItem="JVP-OV-VJT" secondAttribute="bottom" id="O39-R2-Xt3"/>
+                            <constraint firstItem="xd9-v0-7I5" firstAttribute="top" secondItem="hoH-BH-dcI" secondAttribute="top" id="VXL-CD-tX6"/>
+                            <constraint firstItem="JVP-OV-VJT" firstAttribute="top" secondItem="hoH-BH-dcI" secondAttribute="top" id="Xc1-xY-nrd"/>
+                            <constraint firstItem="UV7-0h-nhP" firstAttribute="leading" secondItem="hoH-BH-dcI" secondAttribute="leading" id="YhA-yf-h7D"/>
+                            <constraint firstItem="UV7-0h-nhP" firstAttribute="trailing" secondItem="hoH-BH-dcI" secondAttribute="trailing" id="c9Q-fa-U8e"/>
+                            <constraint firstItem="rfK-Rw-R7O" firstAttribute="leading" secondItem="hoH-BH-dcI" secondAttribute="leading" id="eDj-NF-e2v"/>
+                            <constraint firstItem="hoH-BH-dcI" firstAttribute="trailing" secondItem="rfK-Rw-R7O" secondAttribute="trailing" id="ovv-QW-OgV"/>
+                            <constraint firstItem="rfK-Rw-R7O" firstAttribute="bottom" secondItem="UV7-0h-nhP" secondAttribute="top" id="vF5-yh-Z14"/>
+                            <constraint firstItem="JVP-OV-VJT" firstAttribute="leading" secondItem="hoH-BH-dcI" secondAttribute="leading" id="wfT-an-NyW"/>
+                        </constraints>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                <real key="value" value="16"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="uZh-yl-aT8" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2398.5507246376815" y="136.60714285714286"/>
         </scene>
     </scenes>
     <resources>
